@@ -1,0 +1,17 @@
+/**
+ * @file   ol_player_guayadeque02.h
+ * @author Sarlmol Apple <sarlmolapple@gmail.com>
+ * @date   Fri Aug  20 10:56:12 2010
+ * 
+ * @brief  Supports guayadeque0.2.5
+ * 
+ * 
+ */
+#ifndef _OL_PLAYER_GUAYADEQUE02_H_
+#define _OL_PLAYER_GUAYADEQUE02_H_
+
+#include "ol_player.h"
+
+struct OlPlayer* ol_player_guayadeque02_get();
+
+#endif /*_OL_PLAYER_GUAYADEQUE02_H_*/
